Added testing and better logging